Remove placeholder + unused help messages

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
@@ -70,7 +70,6 @@
                                 <zlb:label
                                     labelFor="login"
                                     labelText="#{msgs.plugin_rest_usercreation_userName}"
-                                    labelHelpText="Lorem ipsum dolor sit amet, consetetur sadipscing elitr"
                                     labelRequired="false" />
 
                                 <zlb:input
@@ -78,9 +77,8 @@
                                     inputAriaLabel="#{msgs.login}"
                                     inputValue="#{LoginForm.login}"
                                     inputRequired="true"
-                                    inputPlaceholder="#{LoginForm.login}"
+                                    inputPlaceholder=""
                                     showHelpBtn="false"
-                                    helpText="Lorem ipsum dolor sit amet, consetetur sadipscing elitr" />
 
                             </div>
 
@@ -89,7 +87,6 @@
                                 <zlb:label
                                     labelFor="passwort"
                                     labelText="#{msgs.plugin_rest_usercreation_password}"
-                                    labelHelpText="Lorem ipsum dolor sit amet, consetetur sadipscing elitr"
                                     labelRequired="false" />
 
                                 <x:inputSecret
@@ -169,7 +166,6 @@
                                 <zlb:label
                                     labelFor="loginOrMail"
                                     labelText="User name or email"
-                                    labelHelpText="Lorem ipsum dolor sit amet, consetetur sadipscing elitr"
                                     labelRequired="false" />
 
                                 <zlb:input
@@ -177,9 +173,9 @@
                                     inputAriaLabel="#{msgs.loginOrMail}"
                                     inputValue="#{LoginForm.login}"
                                     inputRequired="true"
-                                    inputPlaceholder="#{LoginForm.login}"
+                                    inputPlaceholder=""
                                     showHelpBtn="false"
-                                    helpText="Lorem ipsum dolor sit amet, consetetur sadipscing elitr" />
+                                    />
 
                             </div>
 
