--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/footer.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/footer.xhtml
@@ -15,7 +15,7 @@
 <footer class="footer container-fluid">
     <div class="links">
         <div class="links__social">
-            <a href="https://www.facebook.com/zentralundlandesbibliothekberlin" target="_blank" rel="noopener">Facebook</a>
+            <a href="#{msg.plugin_rest_usercreation_fbLink}" target="_blank" rel="noopener">Facebook</a>
         </div>
         <div class="links__legal">
             <a target="_blank" rel="noopener" href="https://www.zlb.de/impressum.html">Impressum</a>
