--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -66,7 +66,7 @@
                             execute="@this" />
                         <f:passThroughAttribute
                             name="placeholder"
-                            value="#{msgs.plugin_rest_usercreation_new_account_userName}" />
+                            value="" />
                     </x:inputText>
                     <!-- ICONS -->
                     <ui:include src="/uii/includes/form_icons.xhtml">
