--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
@@ -78,7 +78,7 @@
                                     inputValue="#{LoginForm.login}"
                                     inputRequired="true"
                                     inputPlaceholder=""
-                                    showHelpBtn="false"
+                                    showHelpBtn="false" />
 
                             </div>
 
