--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -172,7 +172,7 @@
             </div>
             <div class="container-fluid header__lower">
 
-                <a href="external_index.xhtml" class="me-auto">
+                <a href="external_index.xhtml" class="me-auto" aria-label="#{plugin_rest_usercreation_backToLogin}">
                     <ui:include src="../includes/icon-logo-goobi.xhtml" />
                 </a>
                 <h1>
