--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_layout.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_layout.scss
@@ -17,6 +17,7 @@ main {
 }
 
 .common-region {
+  background-color: var(--clr-neutral-400);
   display: grid;
   grid-template-columns: var(--grid-tc);
   grid-auto-rows: auto;
