Show individual page help modal, remove dummy

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -237,20 +237,8 @@
         >
         </zlb:modal>
 
-        <zlb:modal
-            modalId="pageHelpModal"
-            modalTitle="Seiten Hilfe"
-            >
+    <ui:include src="../includes/helpModals.xhtml" />
 
-            <!-- Dummy child, will be replaced later -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ratione totam itaque. Dignissimos quasi nam rerum provident commodi esse cumque architecto culpa, delectus asperiores nisi tempore, incidunt natus praesentium ex?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ratione totam itaque. Dignissimos quasi nam rerum provident commodi esse cumque architecto culpa, delectus asperiores nisi tempore, incidunt natus praesentium ex?</p>
-
-            <img src="https://via.placeholder.com/700x350" class="modal__img"/>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ratione totam itaque. Dignissimos quasi nam rerum provident commodi esse cumque architecto culpa, delectus asperiores nisi tempore, incidunt natus praesentium ex?</p>
-
-        </zlb:modal>
 
         <ui:include src="../includes/footer.xhtml" />
 
