Higlight confirmation box

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -936,7 +936,7 @@
 
             <!-- ANTRAG AUF FREISCHALTUNG -->
 
-            <section class="common-region one-col overview">
+            <section class="common-region one-col overview highlight-border">
                 <h3>
                     <h:outputText value="#{msgs.plugin_rest_usercreation_new_account_askForActivation}" />
                 </h3>
