--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_base.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_base.scss
@@ -80,6 +80,10 @@ body.modal-open {
 
 
 /* Utilities */
+.highlight-border {
+  border: 2px solid var(--clr-primary-400)
+}
+
 .column-start {
   grid-column: 1 / 1;
 }
