Fill `common-region` boxes with a gray background (spans too)

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
@@ -209,6 +209,10 @@ select ~ .font-danger {
   }
 }
 
+.container--user-data .form-field > span {
+  background-color: var(--clr-neutral-600);
+}
+
 /* ******************************* */
 /* Checkboxes                     */
 /* ***************************** */
