--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/helpModals.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/helpModals.xhtml
@@ -16,6 +16,8 @@
 
     <composite:implementation>
 
+    <!-- User Creation Plugin (Registration Wizzard) -->
+
     <ui:fragment rendered="#{externalLoginBean.wizzardMode=='page1'}">
         <zlb:modal
             modalId="pageHelpModal"
@@ -114,6 +116,11 @@
 
         </zlb:modal>
     </ui:fragment>
+
+
+    <!-- Dashboard Delivery -->
+
+
     </composite:implementation>
 
 
