--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -780,7 +780,7 @@
                                 <ui:include src="/uii/includes/form_icons.xhtml">
                                     <ui:param
                                         name="helpTitle"
-                                        value="#{field.shortLabel}" />
+                                        value="#{msgs.plugin_rest_usercreation_new_additionalData}" />
                                     <ui:param
                                         name="helpBody"
                                         value="#{field.helpMessage}" />
