Error view: Change list styles

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_views.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_views.scss
@@ -201,6 +201,14 @@
   color: var(--clr-primary-400);
 }
 
+[action^="/goobi/uii/error.xhtml"] ul {
+  list-style: none;
+}
+
+[action^="/goobi/uii/error.xhtml"] li {
+  display: flex;
+}
+
 [action^="/goobi/uii/error.xhtml"] .stats {
 
   padding: 0;
