--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
@@ -59,27 +59,34 @@
 }
 
 /* Upload form */
-#uploadForm {
-    display: flex;
-    flex-direction: column;
-	align-items: center;
-	justify-content: center;
+#uploadForm,
+#issueUploadForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-    min-height: 45vh;
-    background-color: var(--clr-neutral-400);
-    padding: 6.4rem;
-    border: 1px dashed var(--clr-neutral-600);
-    border-radius: var(--border-radius);
+  min-height: 45vh;
+  background-color: var(--clr-neutral-400);
+  padding: 6.4rem;
+  border: 1px dashed var(--clr-neutral-600);
+  border-radius: var(--border-radius);
 }
-
+#issueUploadForm .form__icons,
 #uploadForm .form__icons {
     margin-top: 0;
 
 }
+
+#issueUploadForm svg,
 #uploadForm svg {
     width: 4.8rem;
     height: 4.8rem;
     fill: var(--clr-primary-400);
+}
+
+#issueUploadForm ~ form {
+  margin-top: 3.2rem;
 }
 
 .form__msg-or {
