--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
@@ -305,6 +305,7 @@ select ~ .font-danger {
 /* Status bar (user creation)     */
 /* ***************************** */
 
+/*
 .zlb-progress {
   --progress-step-width: 16px;
   --progress-line-height: 2px;
@@ -391,11 +392,80 @@ select ~ .font-danger {
     display: none;
   }
 }
+*/
 
 /* ******************************* */
 /* Status bar (delivery Plugin)   */
 /* ***************************** */
 
+
+.statuslist {
+  --progress-step-width: 16px;
+  --progress-line-height: 2px;
+  position: relative;
+  padding: 0;
+  margin: 0rem 3.2rem;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.statuslist::after {
+  content: '';
+  height: 3px;
+  background: var(--clr-neutral-600);
+  width: calc(100%);
+  position: absolute;
+  top: 7px;
+  z-index: 1;
+}
+
+.statuslist li {
+  justify-content: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: flex;
+}
+
+.statuslist li:first-child {
+  justify-content: flex-start;
+}
+
+.statuslist li:last-child {
+  justify-content: flex-end;
+}
+
+.statuslist li span {
+  margin-top: 24px;
+  text-align: center;
+  font-size: var(--fs-200);
+}
+
+.statuslist li::before {
+  z-index: 2;
+  border-radius: 32px;
+  content: "";
+  display: inline-block;
+  height: var(--progress-step-width);
+  position: absolute;
+  width: var(--progress-step-width);
+  background: var(--clr-neutral-600);
+}
+
+.submit button {
+  align-self: flex-start;
+}
+
+// step color code status
+li.active::before {
+  background-color: var(--clr-accent);
+}
+
+li.finished::before {
+  background-color: var(--clr-success);
+}
+/*
 .statuslist {
   --progress-step-width: 16px;
   --progress-line-height: 2px;
@@ -478,6 +548,7 @@ select ~ .font-danger {
   }
 } // end .statuslist
 
+*/
 @media (max-width: 1000px) {
   /* Make status bar larger than the container */
   .container-escape {
