--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
@@ -43,6 +43,7 @@
     justify-content: center;
 }
 
+/*
 .statuslist {
     list-style: none;
     display: flex;
@@ -57,6 +58,7 @@
 .statuslist li:not(:last-child) {
   margin-right: 8px;
 }
+*/
 
 /* Upload form */
 #uploadForm,
