--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
@@ -91,6 +91,10 @@
   margin-top: 3.2rem;
 }
 
+.form__msg {
+    text-align: center;
+}
+
 .form__msg-or {
     text-transform: uppercase;
     position: relative;
