--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -317,7 +317,7 @@
                 <button
                     jsf:action="#{externalLoginBean.createAccount}"
                     jsf:id="create"
-                    class="btn btn-primary-400 ms-auto">
+                    class="btn btn-success ms-auto">
                     <h:outputText value="#{msgs.plugin_rest_usercreation_new_account_createAccount}" />
                 </button>
             </div>
