show an error message when username and password are not filled

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
@@ -76,7 +76,7 @@
                                     inputId="login"
                                     inputAriaLabel="#{msgs.login}"
                                     inputValue="#{LoginForm.login}"
-                                    inputRequired="true"
+                                    inputRequired="false"
                                     inputPlaceholder=""
                                     showHelpBtn="false" />
 
@@ -94,6 +94,7 @@
                                     pt:aria-label="#{msgs.passwort}"
                                     forceId="true"
                                     styleClass="form-control"
+                                    required="false"
                                     value="#{LoginForm.passwort}">
                                     <f:passThroughAttribute
                                         name="placeholder"
